# Taste_n_Rate

./: LICENSE  README.md
backend/: .gitignore  README.md  manage.py  mydatabase  pyproject.toml
backend/reviews/: models.py  serializers.py  tests.py  views.py
backend/reviews/migrations/: 0001_initial.py  0002_auto_20240225_2200.py
backend/taste_bud/: asgi.py  settings.py  urls.py  wsgi.py
backend/taste_bud/reviews/: serializers.py  views.py
backend/taste_n_rate/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  page.jsx
frontend/src/app/(authentication)/forgot_password/: page.jsx
frontend/src/app/restaurants/: page.jsx
frontend/src/app/review/: page.jsx
frontend/src/app/single_restaurant/: page.jsx
frontend/src/components/Footer/: Footer.jsx
frontend/src/components/Footer/styles/: footer.module.css
frontend/src/components/Header/: Header.jsx  Menu.jsx  Navbar.jsx
frontend/src/components/Header/styles/: header.module.css  menu.module.css  navbar.module.css
frontend/src/components/Home/: Category.jsx  Home.jsx  Landing.jsx  RecentActivity.jsx  ReviewCard.jsx
frontend/src/components/Home/styles/: category.module.css  landing.module.css  recent_actvity.module.css  reviewcard.module.css
frontend/src/components/Resaturant/: Restaurant.jsx  RestaurantCard.jsx
frontend/src/components/Resaturant/Filter/: Filters.jsx  (+2 more)
frontend/src/components/Review/: Review.jsx  review.module.css
frontend/src/components/SingleRestaurant/: RestaurantInfo.jsx  restaurantinfo.module.css
(+5 files in other folders)
